  Entity.Definer added, implemented in DefaultEntityDefinition.DefaultEntityDefiner
  Domain.define() now returns a Entity.Definer instead of the Entity.Definition
  Entity.Definition, setters removed, now private in DefaultEntityDefinition
  Domain, most getters moved to Entity.Definition, Domain.getDefinition() public
  Major refactoring, domain.property package added
  EntityEditModel.getEntityDefinition() and EntityTableModel.getEntityDefinition() added
  DefaultEntityDefinition.EntityDefinitionBuilder renamed to DefaultDefinitionBuilder and refactored
  PropertyBuilder now inner classe of relevant Property
  PropertyBuilder implementations now inner classes of relevant Property implementation
  Entity.DefinitionBuilder moved to Entity.Definition and rename Builder, for consistency
  Code cleanup
  DefaultColumnProperty, DefaultForeignKeyProperty, DefaultTransientProperty, builder() method added, Builder implementations now completely privat
  DefaultEntityDefinition.builder() method added, Builder implementation now private
  StringProvider.ForeignKeyValueProvider now uses foreignKeyPropertyId instead of the actual ForeignKeyProperty
  Some code cleanup and inner class renamings
  Removed the unholy mess that was property builder generics
  Further property builder refactoring
  DefaultProperty, bug fixed, used lambda for defaultValueProvider, which caused serialization problems
  Entity.Definition.getColumnProperties() parameter now List instead of Collection, implementation now uses old fashioned loop instead of stream
  Conditions.customCondition() parameter ordering changed
  Gradle asciidoctor plugin added, some doc changes
  jersey-bundle dependency replaced in framework-servlet module, was causing javadoc errors
  REPORT_PATH configuration value moved from EntityApplicationModel to ReportWrapper
  Entity.getBackgroundColor() renamed to getColor()
  Conditions refactoring
  DefaultLocalEntityConnection refactored