@@ -21,6 +21,7 @@ import org.jminor.common.model.PreferencesUtil;
 import org.jminor.framework.db.EntityConnectionProvider;
 import org.jminor.framework.db.EntityConnectionProviders;
 import org.jminor.framework.domain.Domain;
+import org.jminor.framework.domain.Entity;
 import org.jminor.framework.domain.property.ForeignKeyProperty;
 import org.jminor.framework.i18n.FrameworkMessages;
 import org.jminor.framework.model.EntityApplicationModel;
@@ -595,9 +596,9 @@ public abstract class EntityApplicationPanel<M extends SwingEntityApplicationMod
   public final TreeModel getDependencyTreeModel() {
     final DefaultMutableTreeNode root = new DefaultMutableTreeNode(null);
     final Domain domain = applicationModel.getDomain();
-    for (final String entityId : domain.getDefinedEntities()) {
-      if (domain.getDefinition(entityId).getForeignKeyProperties().isEmpty() || referencesOnlySelf(applicationModel.getDomain(), entityId)) {
-        root.add(new EntityDependencyTreeNode(entityId, domain));
+    for (final Entity.Definition definition : domain.getEntityDefinitions()) {
+      if (definition.getForeignKeyProperties().isEmpty() || referencesOnlySelf(applicationModel.getDomain(), definition.getEntityId())) {
+        root.add(new EntityDependencyTreeNode(definition.getEntityId(), domain));
       }
     }
 
@@ -1479,11 +1480,11 @@ public abstract class EntityApplicationPanel<M extends SwingEntityApplicationMod
 
     private List<EntityDependencyTreeNode> initializeChildren() {
       final List<EntityDependencyTreeNode> childrenList = new ArrayList<>();
-      for (final String entityId : domain.getDefinedEntities()) {
-        for (final ForeignKeyProperty fkProperty : domain.getDefinition(entityId).getForeignKeyProperties()) {
+      for (final Entity.Definition definition : domain.getEntityDefinitions()) {
+        for (final ForeignKeyProperty fkProperty : definition.getForeignKeyProperties()) {
           if (fkProperty.getForeignEntityId().equals(getEntityId()) && !fkProperty.isSoftReference()
                   && !foreignKeyCycle(fkProperty.getForeignEntityId())) {
-            childrenList.add(new EntityDependencyTreeNode(entityId, domain));
+            childrenList.add(new EntityDependencyTreeNode(definition.getEntityId(), domain));
           }
         }
       }
